fix-desktop-summary-alignment

--- a/src/components/Checkout/atoms/Summary/Summary.module.css
+++ b/src/components/Checkout/atoms/Summary/Summary.module.css
@@ -180,4 +180,8 @@
         width: 29px;
         object-fit: contain;
     }
+    .grid__product_container {
+        width: auto;
+        justify-self: auto;
+    }
 }
